Activated check for MinIO Client

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ script:
   - ./check-gron.sh
   - ./check-intellij-idea-community.sh
   - ./check-minio.sh
+  - ./check-minio-mc.sh
   - ./check-nexus-oss.sh
   - cat update.log || true
   - ./send-mail.sh
